<resources>
    <string name="app_name">testAnkit</string>
    <string name="wip">Work in progress.</string>
    <string name="_55_5">&#163;55.5</string>

    <string name="rating_value">4.8</string>
    <string name="rating">Rating</string>
    <string name="member_since">Member Since:</string>
    <string name="member_since_value">Oct 2015</string>
    <string name="avg_response_time">Avg. Response Time: 1 day</string>
    <string name="avg_response_time_value">1 day</string>
    <string name="description">Description</string>
    <string name="description_detail">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry/s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="sample_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry/s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="another_info">Another Info</string>
    <string name="schedule_lawyer">SCHEDULE LAWYER</string>
    <string name="reviews">Reviews</string>
    <string name="ranking">Ranking</string>
    <string name="review_value">12</string>
    <string name="ranking_value">1/18</string>
</resources>
